Fixed popup image bug on iphone

--- a/resources/scss/popup.scss
+++ b/resources/scss/popup.scss
@@ -130,7 +130,7 @@
     border-color: #EB5757;
   }
   @media (max-width: $tablet) {
-    order: 2;
+    //order: 2;
   }
   @media (max-width: $mobile) {
     padding: 5px 20px 20px 20px;
@@ -375,7 +375,7 @@
  /*  flex: 1 0 340px;
   width: 340px; */
   width: 100%;
-  order: 1;
+  //order: 1;
  }
  @media (max-width: $mobile) {
   max-height: 240px;
@@ -383,6 +383,7 @@
  .popup__img-body-icon{
   width: 100%;
   height: 100%;
+  //background-image: url("../../public/img/popup/es/1_.webp");
   background-image: url("https://colorit.artgas.pro/img/popup/es/1_.webp");
   background-repeat: no-repeat;
   background-size: cover;
@@ -410,6 +411,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  //background-image: url("../../public/img/popup/es/1_.webp");
   background: url("https://colorit.artgas.pro/img/popup/es/2_.webp"),$purple;
   background-repeat: no-repeat;
   background-size: 105%;
